name:                harmonisk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fonfalleh/harmonisk#readme
license:             MIT
license-file:        LICENSE
author:              FonFalleh
maintainer:          fonfalleh@gmail.com
copyright:           2017 FonFalleh
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable harmonisk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , harmonisk
                     , midi
  default-language:    Haskell2010

test-suite harmonisk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , harmonisk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fonfalleh/harmonisk
